// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/ViolationsInspector/ViolationCardList/ViolationCard Default smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list">
                  <div class="violation-card bg-body-tertiary">
                    <div class="violation-card-row">
                      <div>
                        <a data-bs-toggle="offcanvas"
                           href="#showViolationDetails"
                           role="button"
                           aria-controls="showViolationDetails"
                        >
                          11/07/2024 10:47 PM
                        </a>
                      </div>
                      <div>
                        Brooklyn
                      </div>
                    </div>
                    <div class="violation-card-row">
                      <div>
                        No Standing - Bus Stop
                      </div>
                      <div>
                        $90.00
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationCardList/ViolationCard FullFineAndLocationData smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list">
                  <div class="violation-card expanded-details bg-body-tertiary">
                    <div class="violation-card-row">
                      <div>
                        <a data-bs-toggle="offcanvas"
                           href="#showViolationDetails"
                           role="button"
                           aria-controls="showViolationDetails"
                        >
                          11/07/2024 10:47 PM
                        </a>
                      </div>
                      <div class="expanded-location">
                        <div class="violation-location">
                          <span>
                            8002 3rd Ave
                          </span>
                        </div>
                        <div class="violation-borough-abbreviation">
                          <span>
                            Brooklyn
                          </span>
                        </div>
                      </div>
                    </div>
                    <div class="violation-card-row">
                      <div>
                        No Standing - Bus Stop
                      </div>
                      <div>
                        <div class="fines-breakdown">
                          <div class="summary-box keys">
                            <div>
                              Initial:
                            </div>
                            <div>
                              Interest:
                            </div>
                            <div class="fine-added">
                              Penalties:
                            </div>
                            <div>
                              Total:
                            </div>
                            <div>
                              Reductions:
                            </div>
                            <div class="fine-subtracted">
                              Paid:
                            </div>
                            <div class>
                              Outstanding:
                            </div>
                          </div>
                          <div class="summary-box values fines"
                               role="math"
                               aria-label="$65.00 fined + $0.69 in interest + $25.00 in penalties - $0.69 reduced - $75.00 paid = $15.00 oustanding"
                          >
                            <div class="math-symbols">
                              <div>
                                &nbsp;&nbsp;&nbsp;
                              </div>
                              <div>
                                &nbsp;&nbsp;&nbsp;
                              </div>
                              <div class="fine-added">
                                +&nbsp;
                              </div>
                              <div>
                                &nbsp;&nbsp;&nbsp;
                              </div>
                              <div>
                                &nbsp;&nbsp;&nbsp;
                              </div>
                              <div class="fine-subtracted">
                                –&nbsp;
                              </div>
                              <div>
                                &nbsp;&nbsp;&nbsp;
                              </div>
                            </div>
                            <div class="amounts">
                              <div>
                                $65.00
                              </div>
                              <div>
                                $0.69
                              </div>
                              <div class="fine-added">
                                $25.00
                              </div>
                              <div>
                                $90.69
                              </div>
                              <div>
                                $0.69
                              </div>
                              <div class="fine-subtracted">
                                $75.00
                              </div>
                              <div class>
                                $15.00
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationCardList/ViolationCard FullFineData smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list">
                  <div class="violation-card expanded-details bg-body-tertiary">
                    <div class="violation-card-row">
                      <div>
                        <a data-bs-toggle="offcanvas"
                           href="#showViolationDetails"
                           role="button"
                           aria-controls="showViolationDetails"
                        >
                          11/07/2024 10:47 PM
                        </a>
                      </div>
                      <div>
                        Brooklyn
                      </div>
                    </div>
                    <div class="violation-card-row">
                      <div>
                        No Standing - Bus Stop
                      </div>
                      <div>
                        <div class="fines-breakdown">
                          <div class="summary-box keys">
                            <div>
                              Initial:
                            </div>
                            <div>
                              Interest:
                            </div>
                            <div class="fine-added">
                              Penalties:
                            </div>
                            <div>
                              Total:
                            </div>
                            <div>
                              Reductions:
                            </div>
                            <div class="fine-subtracted">
                              Paid:
                            </div>
                            <div class>
                              Outstanding:
                            </div>
                          </div>
                          <div class="summary-box values fines"
                               role="math"
                               aria-label="$65.00 fined + $0.69 in interest + $25.00 in penalties - $0.69 reduced - $75.00 paid = $15.00 oustanding"
                          >
                            <div class="math-symbols">
                              <div>
                                &nbsp;&nbsp;&nbsp;
                              </div>
                              <div>
                                &nbsp;&nbsp;&nbsp;
                              </div>
                              <div class="fine-added">
                                +&nbsp;
                              </div>
                              <div>
                                &nbsp;&nbsp;&nbsp;
                              </div>
                              <div>
                                &nbsp;&nbsp;&nbsp;
                              </div>
                              <div class="fine-subtracted">
                                –&nbsp;
                              </div>
                              <div>
                                &nbsp;&nbsp;&nbsp;
                              </div>
                            </div>
                            <div class="amounts">
                              <div>
                                $65.00
                              </div>
                              <div>
                                $0.69
                              </div>
                              <div class="fine-added">
                                $25.00
                              </div>
                              <div>
                                $90.69
                              </div>
                              <div>
                                $0.69
                              </div>
                              <div class="fine-subtracted">
                                $75.00
                              </div>
                              <div class>
                                $15.00
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationCardList/ViolationCard FullLocationData smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list">
                  <div class="violation-card expanded-details bg-body-tertiary">
                    <div class="violation-card-row">
                      <div>
                        <a data-bs-toggle="offcanvas"
                           href="#showViolationDetails"
                           role="button"
                           aria-controls="showViolationDetails"
                        >
                          11/07/2024 10:47 PM
                        </a>
                      </div>
                      <div class="expanded-location">
                        <div class="violation-location">
                          <span>
                            8002 3rd Ave
                          </span>
                        </div>
                        <div class="violation-borough-abbreviation">
                          <span>
                            Brooklyn
                          </span>
                        </div>
                      </div>
                    </div>
                    <div class="violation-card-row">
                      <div>
                        No Standing - Bus Stop
                      </div>
                      <div>
                        $90.00
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationCardList/ViolationCard NoBoroughData smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list">
                  <div class="violation-card bg-body-tertiary">
                    <div class="violation-card-row">
                      <div>
                        <a data-bs-toggle="offcanvas"
                           href="#showViolationDetails"
                           role="button"
                           aria-controls="showViolationDetails"
                        >
                          11/07/2024 10:47 PM
                        </a>
                      </div>
                      <div>
                        No Borough Available
                      </div>
                    </div>
                    <div class="violation-card-row">
                      <div>
                        No Standing - Bus Stop
                      </div>
                      <div>
                        $90.00
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationCardList/ViolationCard NoDateTime smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list">
                  <div class="violation-card bg-body-tertiary">
                    <div class="violation-card-row">
                      <div>
                        N/A
                      </div>
                      <div>
                        Brooklyn
                      </div>
                    </div>
                    <div class="violation-card-row">
                      <div>
                        No Standing - Bus Stop
                      </div>
                      <div>
                        $90.00
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationCardList/ViolationCard NoFineData smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list">
                  <div class="violation-card bg-body-tertiary">
                    <div class="violation-card-row">
                      <div>
                        <a data-bs-toggle="offcanvas"
                           href="#showViolationDetails"
                           role="button"
                           aria-controls="showViolationDetails"
                        >
                          11/07/2024 10:47 PM
                        </a>
                      </div>
                      <div>
                        Brooklyn
                      </div>
                    </div>
                    <div class="violation-card-row">
                      <div>
                        No Standing - Bus Stop
                      </div>
                      <div>
                        N/A
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationCardList/ViolationCard NoViolationDescription smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list">
                  <div class="violation-card bg-body-tertiary">
                    <div class="violation-card-row">
                      <div>
                        <a data-bs-toggle="offcanvas"
                           href="#showViolationDetails"
                           role="button"
                           aria-controls="showViolationDetails"
                        >
                          11/07/2024 10:47 PM
                        </a>
                      </div>
                      <div>
                        Brooklyn
                      </div>
                    </div>
                    <div class="violation-card-row">
                      <div>
                        No Description Available
                      </div>
                      <div>
                        $90.00
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
